package ca.mcmaster.se2aa4.island.team111;

public interface Arriver {
    Decision moveTo();
    boolean arrivingIsDone();
}
