package ca.mcmaster.se2aa4.island.team111;

public interface Finder {
    Decision find();
    boolean findingIsDone();
}
